--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 </head>
 <body>
     <main>
+        <h1>Tareas de Casa</h1>
+        <mis_tareas :tasks="tareasCasa"></mis_tareas>
+        <hr>
+        <mis_tareas :tasks="tareas"></mis_tareas>
 
-
-
+        
 
         <pre>{{ $data }}</pre>
     </main>
