Component independent, with data as a function

--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 </head>
 <body>
     <main>
-        <h1>Tareas de Casa</h1>
-        <mis_tareas :tasks="tareasCasa"></mis_tareas>
-        <hr>
-        <mis_tareas :tasks="tareas"></mis_tareas>
+        <h1>Tareas</h1>
+        <mis_tareas></mis_tareas>
+        
 
         
 
