Finish communication between components

--- a/component_comunication/index.html
+++ b/component_comunication/index.html
@@ -8,6 +8,7 @@
     
    <main>
     <listado-productos :productos="productos"></listado-productos>
+    <carrito-compra></carrito-compra>
    
 </main>
     <script src="https://unpkg.com/vue@2.1.10/dist/vue.js"></script>
